--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -1298,22 +1298,12 @@
       "Request Done\n",
       "Request Done\n",
       "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
-      "Request Done\n",
       "Request Done\n"
      ]
     }
    ],
    "source": [
-    "for x in games[2280: 2371]:\n",
+    "for x in games[2797: 2878]:\n",
     "    time.sleep(1)\n",
     "    api_call = rmatches(x)\n",
     "    try:\n",
@@ -1321,8 +1311,8 @@
     "        for team in api_call['teams']:\n",
     "            blue = team['win']\n",
     "        for x in api_call['participantIdentities']:\n",
-    "            if x['player']['summonerName'] == 'Vander':\n",
-    "                name = 'Vander'\n",
+    "            if x['player']['summonerName'] == 'Jenax':\n",
+    "                name = 'Jenax'\n",
     "                partid = x['participantId']\n",
     "            else:\n",
     "                partid = 'no info'\n",
